[tool.poetry]
name = "autodocpy"
version = "0.1.0"
description = "AutoDocPy is a Python package for automatically generating API documentation from code using natural language processing and machine learning techniques."
authors = ["Pushp Vashisht <pushptyagi1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
